# python-code-snippets

./: .bandit  .flake8  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  pytest.ini
.github/workflows/: main.yml  tests.yml
ms-teams-notifications/: README.md  pyproject.toml
tests/scripts/: test_file_generator.py  test_temperature_conversion.py
tools/cli-tools/: create_random_files.py  file_searcher.py  update_git_repos.py
tools/github/: check_repos.py  check_repos_with_async.py
tools/google/: README.md  get_gmail_emails.py
tools/microsoft/: README.md  query_azure_artifacts.py  teams_notify.py
tools/ms-teams-notifications/poc_teams_integration/: main.py
tools/scripts/: convert_temperature.py  file_searcher.py  get_folder_tree.py  init_creator.py  update_git_repos.py
