[tool.poetry]
name = "cli-tools"
version = "0.1.0"
description = ""
authors = ["Patryk Kubiak <Patryk.Kubiak@gmail.com>"]
readme = "README.md"
packages = [{include = "cli_tools"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
pre-commit = "^3.1.1"
bandit = "^1.7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
