[tool.poetry]
name = "cli-tools"
version = "0.1.0"
description = ""
authors = ["Patryk Kubiak <Patryk.Kubiak@gmail.com>"]
readme = "README.md"
packages = [{include = "tools"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
pre-commit = "^3.1.1"
bandit = "^1.7.4"
black = "^23.3.0"


[tool.poetry.group.async.dependencies]
aiohttp = "^3.8.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
