[tool.poetry]
name = "poc-teams-integration"
version = "0.1.0"
description = ""
authors = ["Patryk Kubiak <Patryk.Kubiak@gmail.com>"]
readme = "README.md"
packages = [{include = "poc_teams_integration"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
click = "^8.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
